--- a/back/package.json
+++ b/back/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "bignumber.js": "9.0.0",
+    "cors": "2.8.5",
     "express": "4.17.1",
     "request": "2.88.0"
   }
