--- a/back/package.json
+++ b/back/package.json
@@ -1,8 +1,8 @@
 {
   "name": "balance-checker-back",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "bignumber.js": "9.0.0",
