--- a/back/package.json
+++ b/back/package.json
@@ -2,7 +2,8 @@
   "name": "balance-checker-back",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha"
   },
   "dependencies": {
     "bignumber.js": "9.0.0",
@@ -12,5 +13,11 @@
   },
   "engines": {
     "node": "8.10.0"
+  },
+  "devDependencies": {
+    "chai": "4.2.0",
+    "chai-http": "4.3.0",
+    "mocha": "6.1.4",
+    "nock": "10.0.6"
   }
 }
